Yaml konfiguráció aktualizálás